# llvm-epp

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  MIT-LICENSE.txt  README.md
cmake/: FindClang.cmake
doc/: main.tex  ref.bib  sig-alternate.cls
include/: AllInliner.h  AltCFG.h  AuxGraph.h  BreakSelfLoopsPass.h  Common.h  EPPDecode.h  EPPEncode.h  EPPPathPrinter.h  EPPProfile.h  Namer.h  Simplify.h  SplitLandingPadPredsPass.h
lib/: CMakeLists.txt
lib/common/: BranchTaxonomy.cpp  CMakeLists.txt  Common.cpp  Helpers.cpp
lib/epp/: AltCFG.cpp  AuxGraph.cpp  BreakSelfLoopsPass.cpp  CMakeLists.txt  EPPDecode.cpp  EPPEncode.cpp  EPPPathPrinter.cpp  EPPProfile.cpp  Runtime.cpp  RuntimeAgg.cpp  RuntimeRLE.cpp  SplitLandingPadPredsPass.cpp
lib/inliner/: CMakeLists.txt  Inliner.cpp
lib/namer/: CMakeLists.txt  Namer.cpp
lib/simplify/: CMakeLists.txt  Simplify.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/c/: 01-basic.c
test/srcs/: 01-basic.c  01-basic.c.pp  01-basic.c.txt  02-triangle.c  03-diamond.c  03-diamond.c.pp  03-diamond.c.txt  04-diamond-x2.c  04-diamond-x2.c.pp  04-diamond-x2.c.txt  05-loop.c  05-loop.c.pp  05-loop.c.txt  06-loop-triangle.c  06-loop-triangle.c.pp  06-loop-triangle.c.txt  07-exception.cxx  07-exception.cxx.pp  07-exception.cxx.txt  08-pthread.c  08-pthread.c.pp  08-pthread.c.txt  09-pthread2.c  09-pthread2.c.pp  09-pthread2.c.txt  10-omp.c  10-omp.c.txt  11-omp-for.c  11-omp-for.c.pp  11-omp-for.c.txt  12-thread.cxx  12-thread.cxx.txt  13-switch.c  13-switch.c.pp  13-switch.c.txt  14-triangle-loop.c  14-triangle-loop.c.pp  14-triangle-loop.c.txt  15-crit-ex.cxx  15-crit-ex.cxx.txt  (+3 more)
test/srcs/deco/: 01-basic.c  02-triangle.c  03-diamond.c  04-diamond-x2.c  05-loop.c  06-loop-triangle.c
test/srcs/inst/: 01-basic.c  02-triangle.c  03-diamond.c  04-diamond-x2.c  05-loop.c  06-loop-triangle.c
test/srcs/prof/: 01-basic.c  02-triangle.c  03-diamond.c  04-diamond-x2.c  05-loop.c  06-loop-triangle.c  07-exception.cxx  08-thread.c  09-thread2.c  10-omp.c
tools/: CMakeLists.txt
tools/epp/: CMakeLists.txt  main.cpp
tools/llvm-epp/: CMakeLists.txt  config.h.cmake  main.cpp
